crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_AnnotatedGlobal_annotated_global_3.10.snap
---
source: crates/ruff_linter/src/linter.rs
---
invalid-syntax: annotated name `a` can't be global
 --> <filename>:5:5
  |
3 | def f1():
4 |     global a
5 |     a: str = 'foo'
  |     ^
6 |
7 | b: int = 1
  |

invalid-syntax: annotated name `b` can't be global
  --> <filename>:11:9
   |
 9 |     def inner1():
10 |         global b
11 |         b: str = 'nested'
   |         ^
12 |
13 | c: int = 1
   |

invalid-syntax: annotated name `c` can't be global
  --> <filename>:16:5
   |
14 | def f2():
15 |     global c
16 |     c: list[str] = []
   |     ^
   |
