crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_AsyncComprehensionOutsideAsyncFunction_async_in_sync_error_on_310_3.10.snap
---
source: crates/ruff_linter/src/linter.rs
---
SyntaxError: cannot use an asynchronous comprehension inside of a synchronous comprehension on Python 3.10 (syntax was added in 3.11)
 --> <filename>:1:27
  |
1 | async def f(): return [[x async for x in foo(n)] for n in range(3)]
  |                           ^^^^^^^^^^^^^^^^^^^^^
  |
