crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_DuplicateKeywordArg_duplicate_keyword_args_3.10.snap
---
source: crates/ruff_linter/src/linter.rs
---
<filename>:4:8: SyntaxError: Duplicate keyword argument "x"
  |
2 | def f(x):
3 |     return x
4 | f(x=1, x=2)
  |        ^
  |
