crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_DuplicateMatchClassAttribute_duplicate_match_class_attribute_3.10.snap
---
source: crates/ruff_linter/src/linter.rs
---
SyntaxError: attribute name `x` repeated in class pattern
 --> <filename>:3:21
  |
2 | match x:
3 |     case Point(x=1, x=2):
  |                     ^
4 |         pass
  |
