crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_DuplicateMatchKey_duplicate_match_key_3.10.snap
---
source: crates/ruff_linter/src/linter.rs
---
SyntaxError: mapping pattern checks duplicate key `'key'`
 --> <filename>:3:21
  |
2 | match x:
3 |     case {'key': 1, 'key': 2}:
  |                     ^^^^^
4 |         pass
  |
