crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_DuplicateTypeParameter_duplicate_type_param_3.12.snap
---
source: crates/ruff_linter/src/linter.rs
---
SyntaxError: duplicate type parameter
 --> <filename>:1:12
  |
1 | class C[T, T]: pass
  |            ^
  |
