crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_InvalidExpression_invalid_expression_walrus_in_return_annotation_3.12.snap
---
source: crates/ruff_linter/src/linter.rs
---
SyntaxError: named expression cannot be used within a generic definition
 --> <filename>:2:22
  |
2 | def f[T](x: int) -> (y := 3): return x
  |                      ^^^^^^
  |
