crates/ruff_linter/src/snapshots/ruff_linter__linter__tests__semantic_syntax_error_InvalidExpression_invalid_expression_yield_from_in_base_class_3.10.snap
---
source: crates/ruff_linter/src/linter.rs
---
<filename>:2:9: SyntaxError: Yield expression cannot be used here
  |
2 | class C(yield from [object]):
  |         ^
3 |     pass
  |
